--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/main-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/main-view.fxml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="379.0" prefWidth="296.0" spacing="20.0" style="-fx-background-color: BC7979;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.MainController">
+<VBox alignment="CENTER" prefHeight="328.0" prefWidth="286.0" spacing="20.0" style="-fx-background-color: BC7979;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.MainController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <Label prefHeight="35.0" prefWidth="194.0" text="Virtual Vineyard" textFill="#a40a0a">
       <font>
-         <Font name="High Tower Text" size="24.0" />
+         <Font name="High Tower Text" size="26.0" />
       </font>
    </Label>
+   <TextField fx:id="usernameTextField" promptText="Username" />
+   <TextField fx:id="passwordTextField" promptText="Password" />
 
-    <Label fx:id="welcomeText" />
-    <Button onAction="#onHelloButtonClick" style="-fx-background-color: A80E0E;" text="Hello Elka!!" textFill="#ffecec">
+    <Label fx:id="loggedText" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="240.0" />
+    <Button defaultButton="true" ellipsisString="" onAction="#onLogInButtonClick" style="-fx-background-color: A80E0E;" text="Log in" textFill="#ffecec">
       <font>
          <Font name="SansSerif Regular" size="12.0" />
       </font></Button>
