--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/register-user-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/register-user-view.fxml
@@ -8,7 +8,7 @@
 
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.controllers.RegisterUserController"
+            fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.RegisterUserController"
             prefHeight="400.0" prefWidth="600.0">
 
 </VBox>
