--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/register-user-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/register-user-view.fxml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.RegisterUserController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="320.0" spacing="20.0" style="-fx-background-color: #D8EEF0;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.RegisterUserController">
+   <Label text="Choose role:" />
+   <ComboBox fx:id="roleComboBox" prefWidth="150.0" style="-fx-background-color: white;" />
+   <Label text="Enter new user information:" />
+   <TextField fx:id="nameTextField" promptText="Name">
+      <VBox.margin>
+         <Insets left="40.0" right="40.0" />
+      </VBox.margin>
+   </TextField>
+   <TextField fx:id="EGNTextField" promptText="EGN">
+      <VBox.margin>
+         <Insets left="40.0" right="40.0" />
+      </VBox.margin>
+   </TextField>
+   <TextField fx:id="usernameTextField" promptText="Username">
+      <VBox.margin>
+         <Insets left="40.0" right="40.0" />
+      </VBox.margin>
+   </TextField>
+   <TextField fx:id="passwordTextField" promptText="Password">
+      <VBox.margin>
+         <Insets left="40.0" right="40.0" />
+      </VBox.margin>
+   </TextField>
+   <HBox alignment="CENTER" prefHeight="30.0" prefWidth="320.0">
+      <VBox.margin>
+         <Insets left="20.0" right="20.0" />
+      </VBox.margin>
+      <Button mnemonicParsing="false" onAction="#onRegisterButtonClick" style="-fx-background-color: #477F86;" text="Register" textFill="WHITE">
+         <HBox.margin>
+            <Insets left="20.0" />
+         </HBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="20.0" prefWidth="58.0" style="-fx-background-color: #a40a0a;" text="Back" textFill="WHITE">
+         <HBox.margin>
+            <Insets left="20.0" right="20.0" />
+         </HBox.margin>
+      </Button>
+   </HBox>
 </VBox>
