--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator-view.fxml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.OperatorController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #E7EEBA;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.OperatorController">
+    <Button mnemonicParsing="false" style="-fx-background-color: #B7D018;" text="Button" textFill="WHITE" />
 </VBox>
