--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/admin-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/admin-view.fxml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="250.0" prefWidth="300.0" spacing="20.0" style="-fx-background-color: #C9F1FF;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.AdminController">
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-   <Label fx:id="adminLabel" text="Hello Admin!" textFill="#0a5061">
-      <font>
-         <Font name="High Tower Text" size="24.0" />
-      </font>
-   </Label>
-   <VBox alignment="CENTER" prefHeight="100.0" prefWidth="100.0" spacing="20.0" style="-fx-background-color: #8CD0D5;">
-      <children>
-         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="100.0" spacing="20.0">
-            <children>
-               <Button alignment="CENTER" mnemonicParsing="false" onAction="#onRegisterUserButtonClick" style="-fx-background-color: #0a5061;" text="Register User" textFill="WHITE" />
-               <Button alignment="CENTER" mnemonicParsing="false" onAction="#onEditUsersButtonClick" style="-fx-background-color: #0a5061;" text="Edit Users" textFill="WHITE" />
-            </children>
-         </HBox>
-         <Button alignment="CENTER" mnemonicParsing="false" onAction="#onListUsersButtonClick" style="-fx-background-color: #0a5061;" text="List Users" textFill="WHITE" />
-      </children>
-      <padding>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-   </VBox>
-   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" style="-fx-background-color: #C6A0A0;">
-      <children>
-         <Button mnemonicParsing="false" onAction="#onRunHostButtonClick" style="-fx-background-color: #000000;" text="Run as Host" textFill="WHITE" />
-         <Button layoutX="100.0" layoutY="12.0" mnemonicParsing="false" onAction="#onRunOperatorButtonClick" style="-fx-background-color: #000000;" text="Run as Operator" textFill="WHITE" />
-      </children>
-      <padding>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-   </HBox>
-   <Button mnemonicParsing="false" onAction="#onBackButtonClick" style="-fx-background-color: #a40a0a;" text="Back" textFill="WHITE" />
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.AdminController">
+   <top>
+       <HBox spacing="10" style="-fx-background-color: #0a5061; -fx-padding: 15;">
+           <Label fx:id="adminLabel" style="-fx-text-fill: white; -fx-font-size: 20px; -fx-font-weight: bold;" text="Hello Admin!">
+            <font>
+               <Font name="High Tower Text" size="12.0" />
+            </font></Label>
+           <Pane HBox.hgrow="ALWAYS" />
+           <Button onAction="#onLogoutClick" style="-fx-font-size: 14px; -fx-background-color: #a40a0a;" text="Logout" textFill="WHITE">
+            <font>
+               <Font name="System Bold Italic" size="12.0" />
+            </font></Button>
+       </HBox>
+   </top>
+   <left>
+       <VBox spacing="15" style="-fx-background-color: #8CD0D5; -fx-padding: 20;">
+           <Button maxWidth="Infinity" onAction="#onRegisterUserClick" style="-fx-background-color: #0a5061;" text="Register User" textFill="WHITE" />
+           <Button maxWidth="Infinity" onAction="#onEditUsersClick" style="-fx-background-color: #0a5061;" text="Edit Users" textFill="WHITE" />
+           <Button maxWidth="Infinity" onAction="#onListUsersClick" style="-fx-background-color: #0a5061;" text="List Users" textFill="WHITE" />
+           <Separator />
+           <Button maxWidth="Infinity" onAction="#onRunHostClick" style="-fx-background-color: #E7EEBA;" text="Run as Host" />
+           <Button maxWidth="Infinity" onAction="#onRunOperatorClick" style="-fx-background-color: #D4BEEE;" text="Run as Operator" />
+       </VBox>
+   </left>
+   <center>
+       <StackPane fx:id="contentPane" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #C9F1FF;" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
