--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host-view.fxml
@@ -5,15 +5,13 @@
 <?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" prefHeight="300.0" prefWidth="250.0" spacing="20.0" style="-fx-background-color: #D4BEEE;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.HostController">
-   <children>
-      <Label text="Hello Host!" textFill="#5f25a1">
-         <font>
-            <Font name="High Tower Text" size="24.0" />
-         </font>
-      </Label>
-      <Button mnemonicParsing="false" style="-fx-background-color: #5F25A1;" text="Add Grapes" textFill="WHITE" />
-      <Button mnemonicParsing="false" style="-fx-background-color: #5F25A1;" text="Add Bottles" textFill="WHITE" />
-      <Button mnemonicParsing="false" style="-fx-background-color: #5F25A1;" text="Check Inventory" textFill="WHITE" />
-      <Button mnemonicParsing="false" style="-fx-background-color: #a40a0a;" text="Back" textFill="WHITE" />
-   </children>
+   <Label fx:id="hostLabel" text="Hello Host!" textFill="#5f25a1">
+      <font>
+         <Font name="High Tower Text" size="24.0" />
+      </font>
+   </Label>
+   <Button mnemonicParsing="false" onAction="#onAddGrapesButtonClick" style="-fx-background-color: #5F25A1;" text="Add Grapes" textFill="WHITE" />
+   <Button mnemonicParsing="false" onAction="#onAddBottlesButtonClick" style="-fx-background-color: #5F25A1;" text="Add Bottles" textFill="WHITE" />
+   <Button mnemonicParsing="false" onAction="#onCheckInventoryButtonClick" style="-fx-background-color: #5F25A1;" text="Check Inventory" textFill="WHITE" />
+   <Button mnemonicParsing="false" onAction="#onBackButtonClick" style="-fx-background-color: #a40a0a;" text="Back" textFill="WHITE" />
 </VBox>
