--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host-view.fxml
@@ -4,14 +4,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="300.0" prefWidth="250.0" spacing="20.0" style="-fx-background-color: #D4BEEE;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.HostController">
-   <Label fx:id="hostLabel" text="Hello Host!" textFill="#5f25a1">
-      <font>
-         <Font name="High Tower Text" size="24.0" />
-      </font>
-   </Label>
-   <Button mnemonicParsing="false" onAction="#onAddGrapesButtonClick" style="-fx-background-color: #5F25A1;" text="Add Grapes" textFill="WHITE" />
-   <Button mnemonicParsing="false" onAction="#onAddBottlesButtonClick" style="-fx-background-color: #5F25A1;" text="Add Bottles" textFill="WHITE" />
-   <Button mnemonicParsing="false" onAction="#onCheckInventoryButtonClick" style="-fx-background-color: #5F25A1;" text="Check Inventory" textFill="WHITE" />
-   <Button mnemonicParsing="false" onAction="#onBackButtonClick" style="-fx-background-color: #a40a0a;" text="Back" textFill="WHITE" />
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.HostController">
+   <top>
+      <HBox spacing="10" style="-fx-background-color: #84973B; -fx-padding: 15;">
+         <Label fx:id="hostLabel" style="-fx-text-fill: white; -fx-font-size: 20px; -fx-font-weight: bold;" text="Hello Host!">
+            <font>
+               <Font name="High Tower Text" size="12.0" />
+            </font></Label>
+         <Pane HBox.hgrow="ALWAYS" />
+         <Button onAction="#onLogoutClick" style="-fx-font-size: 14px; -fx-background-color: #a40a0a;" text="Logout" textFill="WHITE">
+            <font>
+               <Font name="System Bold Italic" size="12.0" />
+            </font></Button>
+      </HBox>
+   </top>
+   <left>
+      <VBox spacing="15" style="-fx-background-color: #B7D018; -fx-padding: 20;">
+         <Button maxWidth="Infinity" onAction="#onAddGrapesClick" style="-fx-background-color: #84973B;" text="Add Grapes" textFill="WHITE" />
+         <Button maxWidth="Infinity" onAction="#onAddBottlesClick" style="-fx-background-color: #84973B;" text="Add Bottles" textFill="WHITE" />
+         <Button maxWidth="Infinity" onAction="#onCheckInventoryClick" style="-fx-background-color: #84973B;" text="Check Inventory" textFill="WHITE" />
+         <Separator />
+      </VBox>
+   </left>
+   <center>
+      <StackPane fx:id="contentPane" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #E7EEBA;" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
