--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator-view.fxml
@@ -2,7 +2,31 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #E7EEBA;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.OperatorController">
-    <Button mnemonicParsing="false" style="-fx-background-color: #B7D018;" text="Button" textFill="WHITE" />
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="483.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.OperatorController">
+<top>
+    <HBox spacing="10" style="-fx-background-color: #5F25A1; -fx-padding: 15;">
+        <Label style="-fx-text-fill: white; -fx-font-size: 20px; -fx-font-weight: bold;" text="Hello Operator!">
+            <font>
+                <Font name="High Tower Text" size="12.0" />
+            </font></Label>
+        <Pane HBox.hgrow="ALWAYS" />
+        <Button style="-fx-font-size: 14px; -fx-background-color: #a40a0a;" text="Logout" textFill="WHITE">
+            <font>
+                <Font name="System Bold Italic" size="12.0" />
+            </font></Button>
+    </HBox>
+</top>
+<left>
+    <VBox spacing="15" style="-fx-background-color: #B07FD1; -fx-padding: 20;">
+        <Button maxWidth="Infinity" style="-fx-background-color: #5F25A1;" textFill="WHITE" />
+        <Button maxWidth="Infinity" style="-fx-background-color: #5F25A1;" textFill="WHITE" />
+        <Button maxWidth="Infinity" style="-fx-background-color: #5F25A1;" textFill="WHITE" />
+        <Separator />
+    </VBox>
+</left>
+<center>
+    <StackPane fx:id="contentPane" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #D4BEEE;" BorderPane.alignment="CENTER" />
+</center>
+</BorderPane>
