--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/list-users-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/list-users-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.ListUsersController"
+            fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.Controllers.ListUsersController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
