--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host/add-grape-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/host/add-grape-view.fxml
@@ -7,24 +7,24 @@
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="320.0" spacing="20.0" style="-fx-background-color: #EEF9C0;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.host.AddGrapeController">
    <Label text="Choose warehouse:" />
    <ComboBox fx:id="warehouseComboBox" prefWidth="150.0" style="-fx-background-color: white;" />
-    <TextField promptText="Grape name">
+    <TextField fx:id="nameTextField" promptText="Grape name">
       <VBox.margin>
          <Insets left="20.0" right="20.0" />
       </VBox.margin>
    </TextField>
-    <TextField promptText="Quantity">
+    <TextField fx:id="quantityTextField" promptText="Quantity">
       <VBox.margin>
          <Insets left="20.0" right="20.0" />
       </VBox.margin>
    </TextField>
-    <TextField promptText="Wine yield per kg (liters)">
+    <TextField fx:id="wineYieldTextField" promptText="Wine yield per kg (liters)">
       <VBox.margin>
          <Insets left="20.0" right="20.0" />
       </VBox.margin>
    </TextField>
     <HBox alignment="CENTER" spacing="30.0" style="-fx-border-color: #73981E;">
-        <RadioButton text="Black" />
-        <RadioButton text="White" />
+        <RadioButton fx:id="blackRadioButton" text="Black" />
+        <RadioButton fx:id="whiteRadioButton" text="White" />
       <VBox.margin>
          <Insets left="20.0" right="20.0" />
       </VBox.margin>
@@ -32,7 +32,7 @@
          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
       </padding>
     </HBox>
-    <Button prefHeight="26.0" prefWidth="59.0" style="-fx-background-color: #73981E; -fx-text-fill: white;" text="Add" />
+    <Button onAction="#onAddGrapeClick" prefHeight="26.0" prefWidth="81.0" style="-fx-background-color: #73981E; -fx-text-fill: white;" text="Add Grape" />
    <padding>
       <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
    </padding>
