--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/bottle-wines-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/bottle-wines-view.fxml
@@ -5,12 +5,19 @@
 <?import javafx.scene.layout.*?>
 
 <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bg.tu_varna.sit.virtualvineyard.GUI.operator.BottleWinesController">
-   <ComboBox fx:id="wineComboBox" onAction="#loadBottledWineData" prefWidth="150.0" promptText="Choose wine...">
-      <VBox.margin>
-         <Insets top="20.0" />
-      </VBox.margin>
-   </ComboBox>
-    <TableView fx:id="bottledWinesTable" prefHeight="401.0" prefWidth="600.0">
+   <HBox alignment="TOP_CENTER" prefHeight="45.0" prefWidth="600.0" spacing="20.0">
+      <children>
+         <ComboBox fx:id="wineComboBox" onAction="#loadBottledWineData" prefWidth="150.0" promptText="Choose wine..." />
+         <ComboBox prefWidth="150.0" />
+      </children>
+   </HBox>
+   <HBox alignment="CENTER" prefHeight="45.0" prefWidth="600.0" spacing="20.0">
+      <children>
+         <ComboBox prefWidth="150.0" />
+         <ComboBox prefWidth="150.0" />
+      </children>
+   </HBox>
+    <TableView fx:id="bottledWinesTable" prefHeight="234.0" prefWidth="555.0">
       <columns>
           <TableColumn fx:id="bottleVolumeColumn" prefWidth="91.19999694824219" text="Bottle Volume" />
           <TableColumn fx:id="quantityColumn" prefWidth="75.0" text="Quantity" />
