--- a/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/operator-view.fxml
+++ b/VirtualVineyard/src/main/resources/bg/tu_varna/sit/virtualvineyard/GUI/operator/operator-view.fxml
@@ -20,10 +20,11 @@
 </top>
 <left>
     <VBox spacing="15" style="-fx-background-color: #B07FD1; -fx-padding: 20;">
-        <Button maxWidth="Infinity" onAction="#onAddWineClick" style="-fx-background-color: #5F25A1;" text="Add Wine" textFill="WHITE" />
-        <Button maxWidth="Infinity" onAction="#onListWinesClick" style="-fx-background-color: #5F25A1;" text="List Wines" textFill="WHITE" />
-         <Button layoutX="30.0" layoutY="71.0" maxWidth="Infinity" onAction="#onBottleWinesClick" style="-fx-background-color: #5F25A1;" text="Bottle Wines" textFill="WHITE" />
+        <Button maxWidth="Infinity" onAction="#onAddWineClick" style="-fx-background-color: #5F25A1;" text="Add Wine Recipe" textFill="WHITE" />
+        <Button maxWidth="Infinity" onAction="#onListWinesClick" style="-fx-background-color: #5F25A1;" text="List Wine Recipes" textFill="WHITE" />
         <Separator />
+         <Button layoutX="30.0" layoutY="71.0" maxWidth="Infinity" onAction="#onBottleWinesClick" style="-fx-background-color: #663366;" text="Bottle Wines" textFill="WHITE" />
+         <Button mnemonicParsing="false" onAction="#onListBottledWinesClick" style="-fx-background-color: #663366;" text="List Bottled Wines" textFill="WHITE" />
     </VBox>
 </left>
 <center>
